installed quality tools: 1) php cs fixer 2) phpstan 3) rector 4) xdebug 5) configured sqlite for testing in memory 6) added a test suit scripts in the composer.json

--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -22,7 +22,9 @@ RUN apt update && apt install -y \
     pdo \
     pdo_mysql \
     && pecl install apcu \
+    && pecl install xdebug \
     && docker-php-ext-enable apcu \
+    && docker-php-ext-enable xdebug \
     && docker-php-ext-configure zip \
     && docker-php-ext-install zip \
     && apt clean && rm -rf /var/lib/apt/lists/*
