--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - '9000:9000'
     volumes:
       - .:/var/www/symfony
+      - ./.docker/php/90-xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
     networks:
       - symfony-network
     depends_on:
@@ -31,7 +32,7 @@ services:
     image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: ${DB_DATABASE:-symfony}pokemon-symfony
+      MYSQL_DATABASE: ${DB_DATABASE:-symfony}
       MYSQL_USER: ${DB_USERNAME:-symfony}
       MYSQL_PASSWORD: ${DB_PASSWORD:-symfony}
     ports:
