--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,13 @@
 /vendor/
 ###< symfony/framework-bundle ###
 
+###> IDE/Phpstorm ###
 .idea/
+###< IDE/Phpstorm ###
+###> friendsofphp/php-cs-fixer ###
+/.php-cs-fixer.cache
+###< friendsofphp/php-cs-fixer ###
+
+###> phpunit/phpunit ###
+.phpunit.result.cache
+###< phpunit/phpunit ###
