--- a/composer.json
+++ b/composer.json
@@ -7,19 +7,23 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/dbal": "^3",
-        "doctrine/doctrine-bundle": "^2.13",
-        "doctrine/doctrine-migrations-bundle": "^3.3",
-        "doctrine/orm": "^3.3",
+        "doctrine/dbal": "^3.9.4",
+        "doctrine/doctrine-bundle": "^2.13.2",
+        "doctrine/doctrine-migrations-bundle": "^3.3.1",
+        "doctrine/orm": "^3.3.1",
+        "pagerfanta/pagerfanta": "^4.7",
+        "pokemon-tcg/pokemon-tcg-sdk-php": "^2.1",
+        "symfony/cache": "7.2.*",
         "symfony/console": "7.2.*",
         "symfony/dotenv": "7.2.*",
-        "symfony/flex": "^2",
+        "symfony/flex": "^2.4.7",
         "symfony/framework-bundle": "7.2.*",
         "symfony/runtime": "7.2.*",
         "symfony/twig-bundle": "7.2.*",
         "symfony/yaml": "7.2.*",
-        "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/extra-bundle": "^2.12|^3.18",
+        "twig/twig": "^2.12|^3.18",
+        "ext-http": "*"
     },
     "config": {
         "allow-plugins": {
@@ -87,12 +91,13 @@
     "require-dev": {
         "dama/doctrine-test-bundle": "^8.2",
         "friendsofphp/php-cs-fixer": "^3.68",
-        "phpstan/phpstan": "^2.1",
-        "phpunit/phpunit": "^11.5",
-        "rector/rector": "^2.0",
+        "mockery/mockery": "^1.6",
+        "phpstan/phpstan": "^2.1.1",
+        "phpunit/phpunit": "^11.5.3",
+        "rector/rector": "^2.0.6",
         "symfony/browser-kit": "7.2.*",
         "symfony/css-selector": "7.2.*",
-        "symfony/maker-bundle": "^1.62",
+        "symfony/maker-bundle": "^1.62.1",
         "symfony/phpunit-bridge": "^7.2"
     }
 }
