created views for listing all cards and showing a card data; added some unit tests and some code refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@
 ###> phpunit/phpunit ###
 .phpunit.result.cache
 ###< phpunit/phpunit ###
+
+###> symfony/asset-mapper ###
+/public/assets/
+/assets/vendor/
+###< symfony/asset-mapper ###
