--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
         "ext-iconv": "*",
         "doctrine/dbal": "^3.9.4",
         "doctrine/doctrine-bundle": "^2.13.2",
-        "doctrine/doctrine-migrations-bundle": "^3.3.1",
+        "doctrine/doctrine-migrations-bundle": "^3.4.0",
         "doctrine/orm": "^3.3.1",
-        "pagerfanta/pagerfanta": "^4.7",
+        "pagerfanta/pagerfanta": "^4.7.1",
         "pokemon-tcg/pokemon-tcg-sdk-php": "^2.1",
+        "symfony/asset": "7.2.*",
+        "symfony/asset-mapper": "7.2.*",
         "symfony/cache": "7.2.*",
         "symfony/console": "7.2.*",
         "symfony/dotenv": "7.2.*",
@@ -22,8 +24,7 @@
         "symfony/twig-bundle": "7.2.*",
         "symfony/yaml": "7.2.*",
         "twig/extra-bundle": "^2.12|^3.18",
-        "twig/twig": "^2.12|^3.18",
-        "ext-http": "*"
+        "twig/twig": "^2.12|^3.18"
     },
     "config": {
         "allow-plugins": {
@@ -58,7 +59,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "importmap:install": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
@@ -90,8 +92,8 @@
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^8.2",
-        "friendsofphp/php-cs-fixer": "^3.68",
-        "mockery/mockery": "^1.6",
+        "friendsofphp/php-cs-fixer": "^3.68.1",
+        "mockery/mockery": "^1.6.12",
         "phpstan/phpstan": "^2.1.1",
         "phpunit/phpunit": "^11.5.3",
         "rector/rector": "^2.0.6",
