--- a/config/services.yaml
+++ b/config/services.yaml
@@ -3,21 +3,13 @@
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
-parameters:
+parameters:    
 
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-
-    Pokemon\Pokemon:
-        class: Pokemon\Pokemon
-        arguments: []
-
-    App\Service\PokemonService:
-        arguments:
-            $service: '@Pokemon\Pokemon'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -30,3 +22,19 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    Pokemon\Pokemon:
+        class: Pokemon\Pokemon
+        calls:
+            - method: 'Options'
+              arguments:
+                  - {verify: true, timeout: 20, connection_timeout: 5}
+            - method: 'ApiKey'
+              arguments:
+                  - '%env(API_KEY)%'
+
+    App\Service\CacheService: ~
+
+    App\Service\PokemonService:
+        arguments:
+            $service: '@Pokemon\Pokemon'
+            $cacheService: '@App\Service\CacheService'
