fix(tests): fixed the issue with the cache on tests. Now it's caching in memory and not using the actual cache from the service and deleting everything.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -32,7 +32,13 @@ services:
               arguments:
                   - '%env(API_KEY)%'
 
-    App\Service\CacheService: ~
+    Symfony\Component\Cache\Adapter\FilesystemAdapter:
+        arguments:
+            $namespace: 'app_cache'
+
+    App\Service\CacheService:
+        arguments:
+            $cache: '@Symfony\Component\Cache\Adapter\FilesystemAdapter'
 
     App\Service\PokemonService:
         arguments:
