--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,7 +23,7 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
     App\Service\CardProviderInterface:
-        class: App\Service\TgcCardProvider
+        class: App\Service\CardProvider
 
     Pokemon\Pokemon:
         class: Pokemon\Pokemon
