feature(ssl cert): installed  ssl certificates (auto-signed) to enable https locally and added CSP headers

--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -1,13 +1,29 @@
 server {
-
     listen 80;
+    server_name localhost default_server;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
     server_name localhost;
+
+    ssl_certificate /etc/nginx/ssl/cert.pem;
+    ssl_certificate_key /etc/nginx/ssl/key.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
 
     root /var/www/symfony/public;
     index index.php;
 
     error_log /var/log/nginx/project_error.log;
     access_log /var/log/nginx/project_access.log;
+
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-Content-Type-Options "nosniff";
+    add_header X-XSS-Protection "1; mode=block";
 
     location / {
         try_files $uri /index.php$is_args$args;
@@ -24,6 +40,8 @@ server {
         fastcgi_buffers 4 256k;
         fastcgi_busy_buffers_size 256k;
 
+        fastcgi_param HTTPS on;
+
         internal;
     }
 
@@ -35,4 +53,8 @@ server {
         return 404;
     }
 
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js|pdf|woff|woff2|ttf|svg)$ {
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
+    }
 }
