--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,6 +25,13 @@ services:
     App\Service\CardProviderInterface:
         class: App\Service\CardProvider
 
+    App\Service\NonceGeneratorInterface:
+        class: App\Service\NonceGenerator
+
+    App\EventListener\CspListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse }
+
     Pokemon\Pokemon:
         class: Pokemon\Pokemon
         calls:
